# RealtyHub

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.test  :memory  Dockerfile  pyproject.toml  ruff.toml  sqltest  test.db
backend/scripts/: checks.sh  pre-commit.sh
backend/src/: config.py  constants.py  exceptions.py  main.py
backend/src/auth/: README.md  constants.py  dependencies.py  exceptions.py  schemas.py  security.py  utils.py  views.py
backend/src/core/: database.py  fake_db.py
backend/src/fake_generators/: __init__.py  image.py  realty.py  user.py
backend/src/image/: models.py  schemas.py  services.py
backend/src/realty/: crud.py  dependecies.py  models.py  schemas.py  views.py
backend/src/user/: crud.py  models.py  schemas.py  views.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_connection.py  test_realty.py  test_user.py  utils.py
frontend/: Dockerfile  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: apiError.js  axiosInstance.js  cloudinary.js  requests.js  services.js
frontend/src/components/: LoginForm.vue  NavBar.vue  ProfileForm.vue  RealtyActions.vue  RealtyDetails.vue  RealtyForm.vue  RealtyItem.vue  RealtyList.vue  RealtySearch.vue  RegistrationForm.vue
frontend/src/pages/: AddRealtyPage.vue  FavoritesPage.vue  LoginPage.vue  MainPage.vue  MyRealtysPage.vue  ProfilePage.vue  RealtyEditPage.vue  RealtyPage.vue  RegistrationPage.vue
frontend/src/router/: router.js
(+10 files in other folders)
